# hope-agent

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.en.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/ha-browser-host/: Cargo.toml
crates/ha-core/: Cargo.toml  build.rs
crates/ha-core/src/: agent_config.rs  agent_lifecycle.rs  agent_loader.rs  app_init.rs  attachments.rs  blocking.rs  browser_state.rs  browser_ui.rs  coding_eval.rs  coding_improvement.rs  coding_loop.rs  context_retrieval.rs  crash_flush.rs  domain_eval.rs  domain_quality.rs  domain_workflow.rs  eval_context.rs  execution_mode.rs  ffmpeg.rs  file_extract.rs  git_control.rs  globals.rs  i18n.rs  issue_reporting.rs  lib.rs  local_embedding.rs  local_model_jobs.rs  loop_control.rs  lsp.rs  mac_control.rs  memory_extract.rs  model_usage.rs  oauth.rs  paths.rs  permissions.rs  project_bootstrap.rs  review.rs  runtime_lock.rs  runtime_tasks.rs  sandbox.rs  (+13 more)
crates/ha-core/src/acp/: agent.rs  types.rs
crates/ha-core/src/acp_control/: config.rs  health.rs  runtime_stdio.rs  session_manager.rs  types.rs
crates/ha-core/src/agent/: active_memory.rs  api_types.rs  coding_profile.rs  config.rs  content.rs  context.rs  events.rs  llm_adapter.rs  migration.rs  mod.rs  preflight.rs  related_notes.rs  retrieval_planner.rs  runtime_ledger.rs  side_query.rs  side_query_stream.rs  streaming_adapter.rs  streaming_loop.rs  token_manifest.rs  types.rs  vision_bridge.rs
crates/ha-core/src/artifacts/: analysis_renderer.rs  mod.rs
crates/ha-core/src/ask_user/: mod.rs  questions.rs  types.rs
crates/ha-core/src/async_jobs/: db.rs  error.rs  events.rs  injection.rs  manager.rs  mod.rs  retention.rs  retry.rs  slots.rs  spawn.rs  types.rs  wait.rs
crates/ha-core/src/automation/: mod.rs
crates/ha-core/src/awareness/: collect.rs  config.rs  mod.rs
crates/ha-core/src/browser/: backend.rs  backend_select.rs  cdp_backend.rs  frame.rs  launch_circuit.rs  mcp_backend.rs  mod.rs  observe_buffer.rs  profile.rs  runtime.rs  singleton_lock.rs  spawn.rs  user_attach.rs
crates/ha-core/src/channel/: accounts.rs  attach_sync.rs  config.rs  inbound_media_common.rs  mod.rs  process_manager.rs  traits.rs  types.rs  webhook_server.rs
crates/ha-core/src/chat_engine/: active_turn.rs  context.rs  durability.rs  engine.rs  im_error_message.rs  im_mirror.rs  im_system_message.rs  mod.rs  persister.rs  stream_broadcast.rs  stream_seq.rs  turn_injection.rs  types.rs
crates/ha-core/src/config/: mod.rs  persistence.rs
crates/ha-core/src/context_compact/: boundary.rs  compact.rs  config.rs  engine.rs  estimation.rs  ledger.rs  manifest.rs  mod.rs  pruning.rs  recovery.rs  round_grouping.rs  summarization.rs  task_notification.rs  types.rs
crates/ha-core/src/cron/: cancel.rs  db.rs  delivery.rs  executor.rs  mod.rs  schedule.rs  scheduler.rs  timeline.rs  types.rs
crates/ha-core/src/dashboard/: control_plane.rs  cost.rs  filters.rs  insights.rs  local_models.rs  mod.rs  queries.rs  types.rs
crates/ha-core/src/design/: audio.rs  brands.rs  code_sync.rs  code_watcher.rs  compile.rs  critique.rs  db.rs  deploy.rs  deploy_vercel.rs  design_md.rs  export.rs  extract.rs  generate.rs  image.rs  kit.rs  mcp_provider.rs  mod.rs  patch.rs  recipe.rs  recipe_demo.rs  render_native.rs  renderer.rs  selfcheck.rs  service.rs  system.rs  theme.rs  threads.rs  token_export.rs
crates/ha-core/src/docker/: deploy.rs  helpers.rs  lifecycle.rs  status.rs
crates/ha-core/src/evaluation/: orchestrator.rs  store.rs  types.rs
crates/ha-core/src/failover/: executor.rs  mod.rs
crates/ha-core/src/filesystem/: git.rs  mod.rs  ops.rs  workspace.rs
crates/ha-core/src/goal/: mod.rs
crates/ha-core/src/hooks/: audit.rs  condition.rs  config.rs  decision.rs  matcher.rs  mod.rs  parse.rs  registry.rs  scopes.rs  transcript.rs  types.rs
crates/ha-core/src/knowledge/: access.rs  agent_api.rs  agent_mcp.rs  chunker.rs  compile.rs  db.rs  embedding.rs  graph.rs  index.rs  inject.rs  mod.rs  parser.rs  reembed.rs  registry.rs  rename.rs  resolver.rs  schema.rs  search.rs  service.rs  source.rs  types.rs  watcher.rs
crates/ha-core/src/lifecycle/: inflight.rs  mod.rs  respawn.rs
crates/ha-core/src/local_llm/: management.rs  mod.rs  types.rs
crates/ha-core/src/mcp/: api.rs  catalog.rs  client.rs  config.rs  invoke.rs  mod.rs  registry.rs  transport.rs
crates/ha-core/src/mcp_server/: mod.rs
crates/ha-core/tests/: coding_eval.rs  hooks_compat.rs  hooks_e2e.rs  hooks_pre_tool_continue_false.rs  hooks_project_scope.rs  lifecycle_smoke.rs  memory_backup_restore.rs  memory_retrieval_scale.rs
crates/ha-eval/: Cargo.toml
crates/ha-eval-spec/: Cargo.toml
crates/ha-eval-spec/src/: app.rs  lib.rs  model.rs
crates/ha-eval/src/: adapters.rs  main.rs  model.rs  model_adapter.rs  model_app_control.rs  model_fake.rs  model_supervisor.rs
crates/ha-server/: Cargo.toml  build.rs
crates/ha-server/src/: auto_approve.rs  banner.rs  config.rs  lib.rs  middleware.rs  web_assets.rs
crates/ha-server/tests/: server_smoke.rs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  macos_control.rs  main.rs  menu_labels.rs  setup.rs  shortcuts.rs  tauri_wrappers.rs  tray.rs  window_state.rs
src-tauri/src/commands/: acp_control.rs  agent_mgmt.rs  auth.rs  browser.rs  channel.rs  chat.rs  coding_eval.rs  coding_improvement.rs  coding_loop.rs  config.rs  context_retrieval.rs  crash.rs  cron.rs  dashboard.rs  design.rs  docker.rs  domain_eval.rs  domain_quality.rs  domain_workflow.rs  dreaming.rs  evaluation.rs  execution_mode.rs  filesystem.rs  git_control.rs  goal.rs  ide_context.rs  knowledge.rs  lifecycle_bridge.rs  local_llm.rs  logging.rs  loop_control.rs  memory.rs  misc.rs  mod.rs  permission.rs  plan.rs  project.rs  project_fs.rs  review.rs  session.rs  (+9 more)
src-tauri/windows/: installer-hooks.nsh
(+2173 files in other folders)
