[package]
name = "hope-agent"
version = "0.9.0"
description = "Hope Agent - Personal AI Assistant with deep system integration"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Desktop builds opt into `desktop-tools` so the screenshot / clipboard
# image sources stay available. The headless ha-server bin (Docker image)
# consumes the same crate without this feature and ships without the
# associated system-lib dependencies.
ha-core = { path = "../crates/ha-core", features = ["desktop-tools"] }
ha-server = { path = "../crates/ha-server" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"
rand = "0.9"
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "native-tls"] }
futures-util = "0.3"
urlencoding = "2"
libc = "0.2"
portable-pty = "0.9"
bollard = "0.20"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
arboard = "3"
regex = "1.12.3"
ignore = "0.4.25"
glob = "0.3.3"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
fastembed = "5"
zerocopy = { version = "0.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
pdf-extract = "0.10"
pdfium-render = "0.9"
calamine = "0.34"
zip = "7"
quick-xml = "0.39"
chromiumoxide = "0.9"
htmd = "0.5"
once_cell = "1"
async-trait = "0.1"
which = "8"
url = "2"
signal-hook = "0.3"
sysinfo = "0.38"
teloxide = { version = "0.17", features = ["macros"], default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
axum = "0.8"
hmac = "0.12"
jsonwebtoken = "9"
rpassword = "7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["std"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSColor", "NSWorkspace", "NSRunningApplication", "NSPasteboard", "NSPasteboardItem", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSDate", "NSError", "NSDictionary", "NSBundle", "NSObject", "NSRunLoop", "NSString", "NSURL"] }
objc2-vision = { version = "0.3.2", default-features = false, features = ["std", "VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "VNTypes", "objc2-core-foundation"] }
xcap = "0.9"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[lints]
workspace = true
