[package]
name = "hope-agent"
version = "0.20.0"
description = "Hope Agent - Personal AI Assistant with deep system integration"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Desktop builds opt into `desktop-tools` so the screenshot / clipboard
# image sources stay available. The headless ha-server bin (Docker image)
# consumes the same crate without this feature and ships without the
# associated system-lib dependencies.
ha-core = { path = "../crates/ha-core", features = ["desktop-tools"] }
ha-server = { path = "../crates/ha-server" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "native-tls"] }
libc = "0.2"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
arboard = "3"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
quick-xml = "0.39"
async-trait = "0.1"
url = "2"
sysinfo = "0.38"
rpassword = "7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["std"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSColor", "NSWorkspace", "NSRunningApplication", "NSPasteboard", "NSPasteboardItem", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSDate", "NSError", "NSDictionary", "NSBundle", "NSObject", "NSRunLoop", "NSString", "NSURL"] }
objc2-vision = { version = "0.3.2", default-features = false, features = ["std", "VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "VNTypes", "objc2-core-foundation"] }
xcap = "0.9"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[lints]
workspace = true
