[package]
name = "ha-eval-spec"
version = "0.1.0"
description = "Deterministic Hope Agent evaluation manifests, plans, and evidence"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
