[package]
name = "ha-eval-spec"
version = "0.1.0"
description = "Hope Agent deterministic and live-model evaluation protocols"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10"
sha2 = { workspace = true }

[lints]
workspace = true
