[package]
name = "ha-server"
version = "0.15.0"
description = "Hope Agent HTTP/WebSocket server"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
build = "build.rs"

# Headless `hope-agent-server` binary. Ships in the official Docker
# image so the container never has to pull Tauri / WebKit / GTK at build
# or runtime. The desktop binary (`hope-agent`, from src-tauri) stays
# the canonical entry for GUI / ACP / auth subcommands; this bin is
# intentionally scoped to `server start` only.
#
# Named `hope-agent-server` rather than `hope-agent` to avoid the
# workspace bin-name collision: both packages writing to
# `target/release/hope-agent` would let `cargo build --workspace`
# overwrite one with the other depending on build order. The Docker
# image renames it back to `/usr/local/bin/hope-agent` on COPY so
# users still type `hope-agent server start` inside the container.
[[bin]]
name = "hope-agent-server"
path = "src/bin/hope-agent.rs"

[build-dependencies]
# build.rs only touches std::fs — no deps needed.

[dependencies]
ha-core = { path = "../ha-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }

reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# HTTP/WS framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Static web GUI assets (SPA fallback). `rust-embed` bakes the Vite `dist/`
# output into the release binary; in debug builds it reads from disk so
# front-end changes reload instantly.
rust-embed = { version = "8", features = ["compression", "mime-guess"] }
mime_guess = "2"

# Used by the `/api/server/local-ips` endpoint and the CLI launch banner to
# substitute a LAN-reachable IP when the server binds to 0.0.0.0.
local-ip-address = "0.6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
