[package]
name = "ha-server"
version = "0.20.0"
description = "Hope Agent HTTP/WebSocket server"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
build = "build.rs"

# Headless `hope-agent-server` binary. Ships in the official Docker
# image so the container never has to pull Tauri / WebKit / GTK at build
# or runtime. The desktop binary (`hope-agent`, from src-tauri) stays
# the canonical entry for GUI / ACP / auth subcommands; this bin is
# intentionally scoped to `server start` only.
#
# Named `hope-agent-server` rather than `hope-agent` to avoid the
# workspace bin-name collision: both packages writing to
# `target/release/hope-agent` would let `cargo build --workspace`
# overwrite one with the other depending on build order. The Docker
# image renames it back to `/usr/local/bin/hope-agent` on COPY so
# users still type `hope-agent server start` inside the container.
[[bin]]
name = "hope-agent-server"
path = "src/bin/hope-agent.rs"

[build-dependencies]
# Pre-compresses the Vite `dist/` output at build time (see build.rs). Doing it
# here rather than at request time keeps the bytes compressed *in the binary*.
brotli = "8"

[dependencies]
ha-core = { path = "../ha-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# HTTP/WS framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Static web GUI assets (SPA fallback). The bundle itself is built by build.rs
# (brotli, stored compressed); `brotli` here is only for the decompress path
# used by the rare client that does not send `Accept-Encoding: br`.
brotli = "8"
mime_guess = "2"

# Used by the `/api/server/local-ips` endpoint and the CLI launch banner to
# substitute a LAN-reachable IP when the server binds to 0.0.0.0.
local-ip-address = "0.6"
tempfile = "3"

# Only the integration tests drive the server over real HTTP; all outbound
# HTTP in the product lives in ha-core.
[dev-dependencies]
reqwest = { workspace = true }

[lints]
workspace = true
